--- a/frontend/components/navbar/navbar.html
+++ b/frontend/components/navbar/navbar.html
@@ -13,6 +13,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/frontend/pages/taxRates.html">Tax Rates</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/frontend/pages/login.html">Login</a>
+                </li>
             </ul>
         </div>
     </div>
